--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="yandex-verification" content="2bce268d0db1d640" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favico/apple-touch-icon.png">
@@ -144,7 +145,7 @@
 								<a href="#"><img src="img/news-1.jfif" alt="news-img"></a>
 							</div>
 							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в
-								соревнованиях по баскетболу, подъёму гири на время и настольному теннису. <a href="#"
+								соревнованиях по стритболу, подъёму гири на время и настольному теннису. <a href="#"
 									title="Подробнее">...</a>
 							</div>
 						</div>
