--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 	<link rel="mask-icon" href="img/favico/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-</head>
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<script src="js/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="js/jquery-3.3.1.min.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
-<title>Уральская вагоноремонтная компания</title>
-<script>
-	$(window).on('load', function () {
-		$preloader = $('.loaderArea'),
-			$loader = $preloader.find('.loader');
-		$loader.fadeOut();
-		$preloader.delay(250).fadeOut('slow');
-	});
-</script>
+	<script src="js/bootstrap.min.js"></script>
+	<title>Уральская вагоноремонтная компания</title>
+	<script>
+		$(window).on('load', function () {
+			$preloader = $('.loaderArea'),
+				$loader = $preloader.find('.loader');
+			$loader.fadeOut();
+			$preloader.delay(250).fadeOut('slow');
+		});
+	</script>
 </head>
+
 <body>
 	<div class="loaderArea">
 		<div class="loader"></div>
@@ -331,76 +331,75 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="card">
-			<div class="card-header">
-				<a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-					<h5 class="mb-0">Дополнительные услуги</h5>
-				</a>
-			</div>
-			<div id="collapseThree" class="collapse" data-parent="#accordion">
-				<div class="card-body">
+			<div class="card">
+				<div class="card-header">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+						<h5 class="mb-0">Дополнительные услуги</h5>
+					</a>
+				</div>
+				<div id="collapseThree" class="collapse" data-parent="#accordion">
 					<div class="card-body">
-						<div class="row">
-							<div class="col-sm-4">
-								<h5>Дополнительные услуги</h5>
-								<div class="container">
-									<p>Наша компани</p>
-								</div>
-								<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId3">
-									Lorem, ipsum dolor.
-								</button>
-								<div class="modal fade" id="modelId3" tabindex="-1" role="dialog"
-									aria-labelledby="modelTitleId" aria-hidden="true">
-									<div class="modal-dialog modal-lg" role="document">
-										<div class="modal-content">
-											<div class="modal-header">
-												<h5 class="modal-title">Свидетельство об аттестации № 452/18</h5>
-												<button type="button" class="close" data-dismiss="modal"
-													aria-label="Close">
-													<span aria-hidden="true">&times;</span>
-												</button>
-											</div>
-											<div class="modal-body">
-												<div class="container">
-													<img src="img/licenses/ubc.jpg" alt="ubc">
+						<div class="card-body">
+							<div class="row">
+								<div class="col-sm-4">
+									<h5>Дополнительные услуги</h5>
+									<div class="container">
+										<p>Наша компани</p>
+									</div>
+									<button type="button" class="btn btn-sm " data-toggle="modal"
+										data-target="#modelId3">
+										Lorem, ipsum dolor.
+									</button>
+									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog"
+										aria-labelledby="modelTitleId" aria-hidden="true">
+										<div class="modal-dialog modal-lg" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title">Свидетельство об аттестации № 452/18</h5>
+													<button type="button" class="close" data-dismiss="modal"
+														aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+												</div>
+												<div class="modal-body">
+													<div class="container">
+														<img src="img/licenses/ubc.jpg" alt="ubc">
+													</div>
 												</div>
 											</div>
 										</div>
 									</div>
-								</div>
-								<script>
-									$('#exampleModal').on('show.bs.modal', event => {
-										var button = $(event.relatedTarget);
-										var modal = $(this);
-										// Use above variables to manipulate the DOM
+									<script>
+										$('#exampleModal').on('show.bs.modal', event => {
+											var button = $(event.relatedTarget);
+											var modal = $(this);
+											// Use above variables to manipulate the DOM
 
-									});
-								</script>
-							</div>
-							<div class="col-sm-4">
-								<h5>Lorem, ipsum.</h5>
-								<ul class="list-group ">
-									<li class="list-group-item" Крытый вагон</li> <li class="list-group-item">Lorem,
-										ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-									<li class="list-group-item">Lorem, ipsum dolor.</li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								<div class="container-fluid">
-									<img class="img-rgv" src="img/additional-serv.jpg" alt="Дополнительные услуги">
+										});
+									</script>
 								</div>
+								<div class="col-sm-4">
+									<h5>Lorem, ipsum.</h5>
+									<ul class="list-group ">
+										<li class="list-group-item">Lorem,sum dolor.</li>
+										<li class="list-group-item">Lorem, ipsum dolor.</li>
+										<li class="list-group-item">Lorem, ipsum dolor.</li>
+										<li class="list-group-item">Lorem, ipsum dolor.</li>
+										<li class="list-group-item">Lorem, ipsum dolor.</li>
+									</ul>
+								</div>
+								<div class="col-sm-4">
+									<div class="container-fluid">
+										<img class="img-rgv" src="img/additional-serv.jpg" alt="Дополнительные услуги">
+									</div>
 
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
 		<h4 class="p-4">Наши партнеры:</h4>
