--- a/index.html
+++ b/index.html
@@ -83,42 +83,78 @@
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-							<img src="img/carousel/first.jpg" alt="First slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/first-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/first-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/first-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/first-fhd.jpg">
+										<img src="img/carousel/first-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>Уральская вагоноремонтная компания</h3>
 								<p>Индивидуальный подход к каждому клиенту</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/second.jpg" alt="Second slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/second-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/second-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/second-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/second-fhd.jpg">
+										<img src="img/carousel/second-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>Вагоносборочных цех</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/third.jpg" alt="Third slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/third-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/third-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/third-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/third-fhd.jpg">
+										<img src="img/carousel/third-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>Запасные детали</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/fouth.jpg" alt="Fourth slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/fouth-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/fouth-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/fouth-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/fouth-fhd.jpg">
+										<img src="img/carousel/fouth-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>КРС</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/fifth.jpg" alt="Fifth slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/fifth-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/fifth-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/fifth-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/fifth-fhd.jpg">
+										<img src="img/carousel/fifth-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/sixtn.JPG" alt="Sixth slide">
+								<picture>
+										<source media="(min-width: 465px)" srcset="./img/carousel/sixth-mobile.jpg">
+										<source media="(min-width: 1000px)" srcset="./img/carousel/sixth-hd.jpg">
+										<source media="(min-width: 1300px)" srcset="./img/carousel/sixth-laptop.jpg">
+										<source media="(min-width: 1600px)" srcset="./img/carousel/sixth-fhd.jpg">
+										<img src="img/carousel/sixth-fhd.jpg" alt="Flowers" style="width:auto;">
+									  </picture>
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
