--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script src="js/jquery-3.3.1.min.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
 	<title>Уральская вагоноремонтная компания</title>
 	<script>
 		$(window).on('load', function () {
@@ -83,78 +80,42 @@
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/first-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/first-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/first-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/first-fhd.jpg">
-										<img src="img/carousel/first-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/first.jpg" alt="First slide">
 							<div class="carousel-caption">
 								<h3>Уральская вагоноремонтная компания</h3>
 								<p>Индивидуальный подход к каждому клиенту</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/second-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/second-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/second-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/second-fhd.jpg">
-										<img src="img/carousel/second-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/second.jpg" alt="Second slide">
 							<div class="carousel-caption">
 								<h3>Вагоносборочных цех</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/third-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/third-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/third-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/third-fhd.jpg">
-										<img src="img/carousel/third-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/third.jpg" alt="Third slide">
 							<div class="carousel-caption">
 								<h3>Запасные детали</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/fouth-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/fouth-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/fouth-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/fouth-fhd.jpg">
-										<img src="img/carousel/fouth-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/fouth.jpg" alt="Fourth slide">
 							<div class="carousel-caption">
 								<h3>КРС</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/fifth-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/fifth-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/fifth-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/fifth-fhd.jpg">
-										<img src="img/carousel/fifth-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/fifth.jpg" alt="Fifth slide">
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-								<picture>
-										<source media="(min-width: 465px)" srcset="./img/carousel/sixth-mobile.jpg">
-										<source media="(min-width: 1000px)" srcset="./img/carousel/sixth-hd.jpg">
-										<source media="(min-width: 1300px)" srcset="./img/carousel/sixth-laptop.jpg">
-										<source media="(min-width: 1600px)" srcset="./img/carousel/sixth-fhd.jpg">
-										<img src="img/carousel/sixth-fhd.jpg" alt="Flowers" style="width:auto;">
-									  </picture>
+							<img src="img/carousel/sixtn.JPG" alt="Sixth slide">
 							<div class="carousel-caption">
 								<h3>Lorem ipsum dolor sit amet.</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
@@ -491,7 +452,9 @@
 			</div>
 		</div>
 	</footer>
+	<script src="js/jquery-3.3.1.min.js"></script>
 
+	<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
