--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<title>Уральская вагоноремонтная компания</title>
-
+	<script>
+		$(window).on('load', function () {
+			$preloader = $('.loaderArea'),
+				$loader = $preloader.find('.loader');
+			$loader.fadeOut();
+			$preloader.delay(250).fadeOut('slow');
+		});
+	</script>
 </head>
 
 <body>
-
+	<div class="loaderArea">
+		<div class="loader"></div>
+	</div>
+	
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
