--- a/index.html
+++ b/index.html
@@ -454,7 +454,14 @@
 		</div>
 	</footer>
 	<script src="js/jquery-3.3.1.min.js"></script>
-
+	<script>
+		$(window).on('load', function () {
+			$preloader = $('.loaderArea'),
+				$loader = $preloader.find('.loader');
+			$loader.fadeOut();
+			$preloader.delay(250).fadeOut('slow');
+		});
+	</script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
 
