--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavId">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item">
-						<a class="nav-link text-uppercase" href="#">О компании</a>
+						<a class="nav-link text-uppercase" href="pages/about.html">О компании</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId"
