--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -36,7 +36,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
-				<img src="img/logo.png" height="25px" alt="uvk">
+				<img src="img/logo.png" alt="uvk">
 			</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
 				data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -201,8 +201,7 @@
 							<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId1">
 								Посмотреть лицензию
 							</button>
-							<div class="modal fade" id="modelId1" tabindex="-1" role="dialog"
-								aria-labelledby="modelTitleId" aria-hidden="true">
+							<div class="modal fade" id="modelId1" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
 								<div class="modal-dialog modal-lg" role="document">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -277,8 +276,7 @@
 								<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId2">
 									Посмотреть лицензию
 								</button>
-								<div class="modal fade" id="modelId2" tabindex="-1" role="dialog"
-									aria-labelledby="modelTitleId" aria-hidden="true">
+								<div class="modal fade" id="modelId2" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
 									<div class="modal-dialog modal-lg" role="document">
 										<div class="modal-content">
 											<div class="modal-header">
@@ -348,8 +346,7 @@
 										data-target="#modelId3">
 										Lorem, ipsum dolor.
 									</button>
-									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog"
-										aria-labelledby="modelTitleId" aria-hidden="true">
+									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
 										<div class="modal-dialog modal-lg" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
@@ -367,14 +364,15 @@
 											</div>
 										</div>
 									</div>
-									<script>
+								
+								<script>
 										$('#exampleModal').on('show.bs.modal', event => {
 											var button = $(event.relatedTarget);
 											var modal = $(this);
 											// Use above variables to manipulate the DOM
 
 										});
-									</script>
+									</script>*/
 								</div>
 								<div class="col-sm-4">
 									<h5>Lorem, ipsum.</h5>
