--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<span class="date">02.04.2019</span>
 						<div class="d-flex">
 							<div class="info">
-								<a href="#"><img src="img/news-1.jfif" alt="news-img"></a>
+								<a href="#"><img src="img/news.png" alt="news-img"></a>
 							</div>
 							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в
 								соревнованиях по стритболу, подъёму гири на время и настольному теннису. <a href="#"
