--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -30,6 +30,7 @@
     });
 </script>
 </head>
+
 <body>
     <div class="loaderArea">
         <div class="loader"></div>
@@ -68,81 +69,26 @@
             </div>
         </nav>
     </div>
-    <table class="table">
-        <tbody>
-            <tr>
-                <td scope="row"><img src="../img/contacts/bodnar.jpg" alt="Боднар В.Е."></td>
-                <td>Боднар Виктор Евгеньевич</td>
-                <td>Генеральный директор</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/ryzanova.jpg" alt="Рузанова З.А."></td>
-                <td>Рузанова Зоя Александровна</td>
-                <td>Первый заместитель генерального директора</td>
-                <td>Тел: 24-86-30</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/morin.jpg" alt="Морин В.В."></td>
-                <td>Морин Виталий Владимирович</td>
-                <td>Главный инженер</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/yximenkova.jpg" alt="Юхименко Е.Г."></td>
-                <td>Юхименко Елена Геннадьевна</td>
-                <td>Заместитель генерального директора<br> по качеству и технологии</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/bobrinskiy.jpg" alt="Бобринский В.Е."></td>
-                <td>Бобринский Вячеслав Александрович</td>
-                <td>Финансовый директор</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/chanchicova.jpg" alt="Чанчикова Н.Н."></td>
-                <td>Чанчикова Надежда Николаевна</td>
-                <td>Начальник отдела сбыта</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="container">
-        <h5>Реквизиты:</h5>
+    <div class="container about">
         <div class="row">
-            <div class="col-sm-6">
-                <div class="container">
-                    <p><span>Акционерное общество «Уральская вагоноремонтная компания» (АО «УВК»)
-                        </span></p>
-                    <p><span>Генеральный директор:</span> Боднар Виктор Евгеньевич</p>
-                    <p><span>Адрес:</span> 455005, Челябинская область г. Магнитогорск, ул. Моховая д. 16</p>
-                    <p><span>E-mail:</span> secretary@uvrk.ru</p>
-                    <p><span>Телефон:</span> +7 (3519) 24-86-24</p>
-                    <p><span>Факс:</span> +7 (3519) 24-86-22</p>
-
-                </div>
-                <a class="btn" href="../doc/requisites.PDF" download="Реквизиты УВК" role="button"> <i
-                        class="fas fa-download"></i>Скачать реквизиты </a>
-            </div>
-            <div class="col-sm-6">
-                <div class="container">
-                    <p><span>ИНН:</span> 7705742646</p>
-                    <p><span>КПП:</span> 745601001</p>
-                    <p><span>ОГРН:</span> 1067746823836</p>
-                    <p><span>Рассчетный счет:</span> 40702810772000010616 Отделение № 8597 Сбербанка России г. Челябинск
-                    </p>
-                    <p><span>БИК:</span> 047501602</p>
-                    <p><span>Корреспондентский счет:</span> 30101810700000000602</p>
-                    <p><span>ОКПО:</span> 96499777</p>
-                    <p><span>ОКФС:</span> 34</p>
-                    <p><span>ОКАТО:</span> 75438372000</p>
-                    <p><span>ОКОПФ:</span> 67</p>
-                    <p><span>ОКВЭД:</span> 35.20.9</p>
-                </div>
-            </div>
+        <div class="col-sm-6">
+            <h5>О компании</h5>
+            <p>Акционерное общество «Уральская вагоноремонтная компания» зарегистрировано 18 июля 2006 года.</p>
+            <p>Профессионализм, качество, надежность, - вот те критерии, благодаря которым компания завоевала доверие и
+                добрую славу от собственников подвижного состава.</p>
+            <p> Следуя европейским стандартам организации производственного процесса, предприятие стремится проводить
+                освоение автоматизации оборудования и внедрять программы, нацеленные на повышение производительности и
+                обеспечение комфортных условий труда работников.</p>
+            <p>Главный приоритет для нашей компании - это интересы собственников подвижного состава. Надежность,
+                индивидуальный подход к каждому клиенту, компетентность персонала - это принципы деятельности АО
+                «УВК», которые позволяют уверенно работать, решая поставленные задачи и отвечая требованиям самых
+                взыскательных клиентов.</p>
+            </p>
         </div>
+        <div class="col-sm-6">
+            <img src="../img/about-origin.jpg" alt="«УВК»">
+        </div>
+    </div>
     </div>
     <footer>
         <div class="container">
