--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="loaderArea">
 		<div class="loader"></div>
 	</div>
-	
+
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
 			<a class="navbar-brand" href="#">
@@ -187,7 +187,6 @@
 				<div class="card-body">
 					<div class="row">
 						<div class="col-sm-4">
-							<h5>Ремонт грузовых вагонов</h5>
 							<div class="container">
 								<p>Наша компания производит капитальный, деповской ремонт полувагонов, а так же текущий
 									ремонт в объеме ТР-1 и ТР-2.
@@ -201,7 +200,8 @@
 							<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId1">
 								Посмотреть лицензию
 							</button>
-							<div class="modal fade" id="modelId1" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+							<div class="modal fade" id="modelId1" tabindex="-1" role="dialog"
+								aria-labelledby="modelTitleId" aria-hidden="true">
 								<div class="modal-dialog modal-lg" role="document">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -228,17 +228,20 @@
 							</script>
 						</div>
 						<div class="col-sm-4">
-							<h5>Мы ремонтируем:</h5>
-							<ul class="list-group ">
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Крытый вагон</li>
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Полувагон</li>
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для перевозки
-									лесоматериалов</li>
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для
-									перевозки<br> контейнеров</li>
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Хоппер</li>
-								<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Думкар</li>
-							</ul>
+							<div class="container">
+								<h5>Мы ремонтируем:</h5>
+								<ul class="list-group ">
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Крытый вагон</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Полувагон</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для
+										перевозки
+										лесоматериалов</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для
+										перевозки<br> контейнеров</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Хоппер</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Думкар</li>
+								</ul>
+							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="container-fluid">
@@ -261,7 +264,6 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<h5>Ремонт колесных пар</h5>
 								<div class="container">
 									<p>АО «УВК» предоставляет услуги по текущему, среднему и капитальному ремонту
 										колесных пар.</p>
@@ -276,7 +278,8 @@
 								<button type="button" class="btn btn-sm " data-toggle="modal" data-target="#modelId2">
 									Посмотреть лицензию
 								</button>
-								<div class="modal fade" id="modelId2" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+								<div class="modal fade" id="modelId2" tabindex="-1" role="dialog"
+									aria-labelledby="modelTitleId" aria-hidden="true">
 									<div class="modal-dialog modal-lg" role="document">
 										<div class="modal-content">
 											<div class="modal-header">
@@ -304,8 +307,9 @@
 								</script>
 							</div>
 							<div class="col-sm-4">
-								<h5>Колесно-роликовый цех состоит из:</h5>
+
 								<div class="container">
+									<h6 class="p-0">Колесно-роликовый цех состоит из:</h6>
 									<p>- Участок ремонта колесных пар со сменой элементов (ВКМ)</p>
 									<p>- Участок ремонта колесных пар обыкновенного и полного освидетельствования и
 										ремонта
@@ -338,15 +342,18 @@
 						<div class="card-body">
 							<div class="row">
 								<div class="col-sm-4">
-									<h5>Дополнительные услуги</h5>
 									<div class="container">
-										<p>Наша компани</p>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est placeat saepe
+											unde soluta quam accusantium asperiores. Minus velit repudiandae fugit
+											reiciendis optio ratione a. Quidem doloribus quia recusandae unde magni!s
+										</p>
 									</div>
 									<button type="button" class="btn btn-sm " data-toggle="modal"
 										data-target="#modelId3">
 										Lorem, ipsum dolor.
 									</button>
-									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog"
+										aria-labelledby="modelTitleId" aria-hidden="true">
 										<div class="modal-dialog modal-lg" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
@@ -364,25 +371,27 @@
 											</div>
 										</div>
 									</div>
-								
-								<script>
+
+									<script>
 										$('#exampleModal').on('show.bs.modal', event => {
 											var button = $(event.relatedTarget);
 											var modal = $(this);
 											// Use above variables to manipulate the DOM
 
 										});
-									</script>*/
+									</script>
 								</div>
 								<div class="col-sm-4">
-									<h5>Lorem, ipsum.</h5>
-									<ul class="list-group ">
-										<li class="list-group-item">Lorem,sum dolor.</li>
-										<li class="list-group-item">Lorem, ipsum dolor.</li>
-										<li class="list-group-item">Lorem, ipsum dolor.</li>
-										<li class="list-group-item">Lorem, ipsum dolor.</li>
-										<li class="list-group-item">Lorem, ipsum dolor.</li>
-									</ul>
+									<div class="container">
+										<h5>Lorem, ipsum.</h5>
+										<ul class="list-group ">
+											<li class="list-group-item">Lorem,sum dolor.</li>
+											<li class="list-group-item">Lorem, ipsum dolor.</li>
+											<li class="list-group-item">Lorem, ipsum dolor.</li>
+											<li class="list-group-item">Lorem, ipsum dolor.</li>
+											<li class="list-group-item">Lorem, ipsum dolor.</li>
+										</ul>
+									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="container-fluid">
@@ -445,8 +454,14 @@
 						объединения производителей железнодорожной техники
 						и в составе Globaltrans.
 					</p>
-					<img src="img/partners/globaltrans.png" alt="глобалтранс">
-					<img class="opzht" src="img/partners/opzt.png" alt="опжт">
+					<div class="row">
+						<div class="col-sm-6">
+							<img src="img/partners/globaltrans.png" alt="глобалтранс">
+						</div>
+						<div class="col-sm-6">
+							<img class="opzht" src="img/partners/opzt.png" alt="опжт">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
