--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -61,39 +61,39 @@
         <tbody>
             <tr>
                 <td scope="row"><img src="../img/contacts/bodnar.jpg" alt="Боднар В.Е."></td>
-                <td>Боднар Виктор Евгеньевич</td>
-                <td>Генеральный директор</td>
+                <td>Боднар<br> Виктор<br> Евгеньевич</td>
+                <td>Генеральный<br> директор</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
                 <td scope="row"><img src="../img/contacts/ryzanova.jpg" alt="Рузанова З.А."></td>
-                <td>Рузанова Зоя Александровна</td>
-                <td>Первый заместитель генерального директора</td>
+                <td>Рузанова<br> Зоя<br> Александровна</td>
+                <td>Первый<br> заместитель<br> генерального<br> директора</td>
                 <td>Тел: 24-86-30</td>
             </tr>
             <tr>
                 <td scope="row"><img src="../img/contacts/morin.jpg" alt="Морин В.В."></td>
-                <td>Морин Виталий Владимирович</td>
-                <td>Главный инженер</td>
+                <td>Морин<br> Виталий<br> Владимирович</td>
+                <td>Главный<br> инженер</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
                 <td scope="row"><img src="../img/contacts/yximenkova.jpg" alt="Юхименко Е.Г."></td>
-                <td>Юхименко Елена Геннадьевна</td>
-                <td>Заместитель генерального директора<br> по качеству и технологии</td>
+                <td>Юхименко<br> Елена<br> Геннадьевна</td>
+                <td>Заместитель<br> генерального<br> директора<br> по качеству<br> и технологии</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
             <tr>
                 <td scope="row"><img src="../img/contacts/bobrinskiy.jpg" alt="Бобринский В.Е."></td>
-                <td>Бобринский Вячеслав Александрович</td>
-                <td>Финансовый директор</td>
+                <td>Бобринский<br> Вячеслав<br> Александрович</td>
+                <td>Финансовый<br> директор</td>
                 <td>Тел: 24-86-20</td>
             </tr>
             <tr>
                 <td scope="row"><img src="../img/contacts/chanchicova.jpg" alt="Чанчикова Н.Н."></td>
-                <td>Чанчикова Надежда Николаевна</td>
-                <td>Начальник отдела сбыта</td>
+                <td>Чанчикова<br> Надежда<br> Николаевна</td>
+                <td>Начальник<br> отдела<br> сбыта</td>
                 <td>Тел: 24-86-20</td>
             </tr>
         </tbody>
