--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -148,8 +148,14 @@
                         объединения производителей железнодорожной техники
                         и в составе Globaltrans.
                     </p>
-                    <img src="../img/globaltrans.png" alt="глобалтранс">
-                    <img class="opzht" src="../img/opzt.png" alt="опжт">
+                    <div class="row">
+                            <div class="col-sm-6">
+                                <img src="../img/partners/globaltrans.png" alt="глобалтранс">
+                            </div>
+                            <div class="col-sm-6">
+                                <img class="opzht" src="../img/partners/opzt.png" alt="опжт">
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
