--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="container">
-								<p>Наша компания производит капитальный, деповской ремонт полувагонов, а так же текущий
+								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так же текущий
 									ремонт в объеме ТР-1 и ТР-2.
-									<p>АО «УВК» является стратегическим партнером «Научно- производственной корпорации
+									<p>Наша компания является стратегическим партнером «Научно- производственной
+										корпорации
 										«Объединенная Вагонная Компания» по обслуживанию и ремонту грузовых вагонов на
 										тележках Барбер производства Тихвинского вагоностроительного завода. </p>
 									<p>Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
@@ -331,79 +332,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="card">
-				<div class="card-header">
-					<a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-						<h5 class="mb-0">Дополнительные услуги</h5>
-					</a>
-				</div>
-				<div id="collapseThree" class="collapse" data-parent="#accordion">
-					<div class="card-body">
-						<div class="card-body">
-							<div class="row">
-								<div class="col-sm-4">
-									<div class="container">
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est placeat saepe
-											unde soluta quam accusantium asperiores. Minus velit repudiandae fugit
-											reiciendis optio ratione a. Quidem doloribus quia recusandae unde magni!s
-										</p>
-									</div>
-									<button type="button" class="btn btn-sm " data-toggle="modal"
-										data-target="#modelId3">
-										Lorem, ipsum dolor.
-									</button>
-									<div class="modal fade" id="modelId3" tabindex="-1" role="dialog"
-										aria-labelledby="modelTitleId" aria-hidden="true">
-										<div class="modal-dialog modal-lg" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title">Свидетельство об аттестации № 452/18</h5>
-													<button type="button" class="close" data-dismiss="modal"
-														aria-label="Close">
-														<span aria-hidden="true">&times;</span>
-													</button>
-												</div>
-												<div class="modal-body">
-													<div class="container">
-														<img src="img/licenses/ubc.jpg" alt="ubc">
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-
-									<script>
-										$('#exampleModal').on('show.bs.modal', event => {
-											var button = $(event.relatedTarget);
-											var modal = $(this);
-											// Use above variables to manipulate the DOM
-
-										});
-									</script>
-								</div>
-								<div class="col-sm-4">
-									<div class="container">
-										<h5>Lorem, ipsum.</h5>
-										<ul class="list-group ">
-											<li class="list-group-item">Lorem,sum dolor.</li>
-											<li class="list-group-item">Lorem, ipsum dolor.</li>
-											<li class="list-group-item">Lorem, ipsum dolor.</li>
-											<li class="list-group-item">Lorem, ipsum dolor.</li>
-											<li class="list-group-item">Lorem, ipsum dolor.</li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-sm-4">
-									<div class="container-fluid">
-										<img class="img-rgv" src="img/additional-serv.jpg" alt="Дополнительные услуги">
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
@@ -411,26 +339,26 @@
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/grs.png" alt="First slide">
 					</div>
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/mmk.png" alt="First slide">
 					</div>
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/np.png" alt="First slide">
 					</div>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/syg.png" alt="First slide">
 					</div>
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/tls.png" alt="First slide">
 					</div>
-					<div class="col-sm-4">
+					<div class="d-flex col-sm-4  justify-content-center">
 						<img src="img/partners/tgk.png" alt="First slide">
 					</div>
 				</div>
