--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 		</div>
 	</div>
 	<footer>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-6">
 					<p class="p-2">
@@ -383,11 +383,13 @@
 						и в составе Globaltrans.
 					</p>
 					<div class="row">
-						<div class="col-sm-6">
-							<img src="img/partners/globaltrans.png" alt="глобалтранс">
+						<div class="d-flex col-sm-6  justify-content-center">
+							<a href="http://www.globaltrans.com" alt="глобалтранс"><img src="img/partners/globaltrans.png"
+									alt="глобалтранс"></a>
 						</div>
-						<div class="col-sm-6">
-							<img class="opzht" src="img/partners/opzt.png" alt="опжт">
+						<div class="d-flex col-sm-6  justify-content-center">
+							<a href="http://opzt.ru" alt="опжт"><img class="opzht" src="img/partners/opzt.png"
+									alt="опжт"></a>
 						</div>
 					</div>
 				</div>
