--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
 									<li class="list-group-item"><img src="img/platform_c.png" alt="Платформа 2"> Платформы для
 										перевозки контейнеров</li>
 									<li class="list-group-item"><img src="img/hopper.png" alt="Хоппер"> Хопперы</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Думкар"> Думкары</li>
 								</ul>
 							</div>
 						</div>
@@ -316,13 +315,13 @@
 			<div class="carousel-item">
 				<div class="row">
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img class="big-img" src="img/partners/syg.png" alt="First slide">
+						<img src="img/partners/syg.png" alt="First slide">
 					</div>
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img class="big-img" src="img/partners/tls.png" alt="First slide">
+						<img src="img/partners/tls.png" alt="First slide">
 					</div>
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img class="big-img" src="img/partners/tgk.png" alt="First slide">
+						<img src="img/partners/tgk.png" alt="First slide">
 					</div>
 				</div>
 			</div>
