--- a/pages/repair-vagon.html
+++ b/pages/repair-vagon.html
@@ -38,17 +38,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-uppercase" href="about.html">О компании</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
-                            <a class="dropdown-item" href="#">Ремонт колесных пар</a>
-                            <a class="dropdown-item" href="#">Дополнительные услуги</a>
-                        </div>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="#">Контакты</a>
+                        <a class="nav-link text-uppercase" href="#">Услуги</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-uppercase" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
                 <span class="email"><a href="mailto:info@uvrk.ru" title="Связаться с нами"><i
