--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 </head>
 
 <body>
-	<div class="loaderArea">
-		<div class="loader"></div>
-	</div>
 
 	<div class="container">
 		<nav class="navbar navbar-expand-sm navbar-light">
@@ -48,14 +45,8 @@
 					<li class="nav-item">
 						<a class="nav-link text-uppercase" href="pages/about.html">О компании</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
-						<div class="dropdown-menu" aria-labelledby="dropdownId">
-							<a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
-							<a class="dropdown-item" href="#">Ремонт колесных пар</a>
-							<a class="dropdown-item" href="#">Дополнительные услуги</a>
-						</div>
+					<li class="nav-item">
+						<a class="nav-link text-uppercase" href="pages/repair-vagon.html">Услуги</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link text-uppercase" href="pages/contacts.html">Контакты</a>
@@ -76,12 +67,11 @@
 						<li data-target="#carousel" data-slide-to="1"></li>
 						<li data-target="#carousel" data-slide-to="2"></li>
 						<li data-target="#carousel" data-slide-to="3"></li>
-						<li data-target="#carousel" data-slide-to="4"></li>
-						<li data-target="#carousel" data-slide-to="5"></li>
+					
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-							<img src="img/carousel/first.jpg" alt="First slide">
+							<img src="img/carousel/sixtn.JPG" alt="First slide">
 							<div class="carousel-caption">
 								<h3>Уральская вагоноремонтная компания</h3>
 								<p>Индивидуальный подход к каждому клиенту</p>
@@ -91,34 +81,20 @@
 							<img src="img/carousel/second.jpg" alt="Second slide">
 							<div class="carousel-caption">
 								<h3>Вагоносборочных цех</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="img/carousel/third.jpg" alt="Third slide">
-							<div class="carousel-caption">
-								<h3>Запасные детали</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat</p>
+								<p>Производим капитальный, деповкой и текущий ремонт грузовых вагонов</p>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/fouth.jpg" alt="Fourth slide">
 							<div class="carousel-caption">
-								<h3>КРС</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
+								<h3>Колесно-роликовый цех</h3>
+								<p>Предоставляем услуги по текущему, среднему и капитальному ремонту колесных пар</p>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/carousel/fifth.jpg" alt="Fifth slide">
 							<div class="carousel-caption">
-								<h3>Lorem ipsum dolor sit amet.</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="img/carousel/sixtn.JPG" alt="Sixth slide">
-							<div class="carousel-caption">
-								<h3>Lorem ipsum dolor sit amet.</h3>
+								<h3>КРС</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat.</p>
 							</div>
 						</div>
@@ -186,7 +162,7 @@
 			<div id="collapseOne" class="collapse show" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-sm-4">
+						<div class="col-sm-6">
 							<div class="container">
 								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так же текущий
 									ремонт в объеме ТР-1 и ТР-2.
@@ -212,7 +188,7 @@
 											</button>
 										</div>
 										<div class="modal-body">
-											<div class="container">
+											<div class="container-fluid">
 												<img src="img/licenses/1305.jpg" alt="1305">
 											</div>
 										</div>
@@ -228,27 +204,20 @@
 								});
 							</script>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-6">
 							<div class="container">
 								<h5>Мы ремонтируем:</h5>
 								<ul class="list-group ">
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Крытый вагон</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Полувагон</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для
-										перевозки
-										лесоматериалов</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Платформа для
-										перевозки<br> контейнеров</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Хоппер</li>
-									<li class="list-group-item"><img src="img/cov.png" alt="Вагон"> Думкар</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Крытый вагон"> Крытые вагоны</li>
+									<li class="list-group-item"><img src="img/poluvagon.png" alt="Полувагон"> Полувагоны</li>
+									<li class="list-group-item"><img src="img/platform.png" alt="Платформа 1"> Платформы для
+										перевозки лесоматериалов</li>
+									<li class="list-group-item"><img src="img/platform_c.png" alt="Платформа 2"> Платформы для
+										перевозки контейнеров</li>
+									<li class="list-group-item"><img src="img/hopper.png" alt="Хоппер"> Хопперы</li>
+									<li class="list-group-item"><img src="img/cov.png" alt="Думкар"> Думкары</li>
 								</ul>
 							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="container-fluid">
-								<img class="img-rgv" src="img/repair-vagon.jpg" alt="Ремонт Грузовых Вагонов">
-							</div>
-
 						</div>
 					</div>
 				</div>
@@ -264,7 +233,7 @@
 				<div class="card-body">
 					<div class="card-body">
 						<div class="row">
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								<div class="container">
 									<p>АО «УВК» предоставляет услуги по текущему, среднему и капитальному ремонту
 										колесных пар.</p>
@@ -291,7 +260,7 @@
 												</button>
 											</div>
 											<div class="modal-body">
-												<div class="container">
+												<div class="container-fluid">
 													<img src="img/licenses/cart.jpg" alt="cart">
 												</div>
 											</div>
@@ -307,7 +276,7 @@
 									});
 								</script>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 
 								<div class="container">
 									<h6 class="p-0">Колесно-роликовый цех состоит из:</h6>
@@ -321,12 +290,6 @@
 										накопители колёс и осей с высокой степенью механизации основных, контрольных и
 										вспомогательных процессов.</p>
 								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="container-fluid">
-									<img class="img-rgv" src="img/repair-pair.jpg" alt="Ремонт колесных пар">
-								</div>
-
 							</div>
 						</div>
 					</div>
@@ -353,13 +316,13 @@
 			<div class="carousel-item">
 				<div class="row">
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img src="img/partners/syg.png" alt="First slide">
+						<img class="big-img" src="img/partners/syg.png" alt="First slide">
 					</div>
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img src="img/partners/tls.png" alt="First slide">
+						<img class="big-img" src="img/partners/tls.png" alt="First slide">
 					</div>
 					<div class="d-flex col-sm-4  justify-content-center">
-						<img src="img/partners/tgk.png" alt="First slide">
+						<img class="big-img" src="img/partners/tgk.png" alt="First slide">
 					</div>
 				</div>
 			</div>
