--- a/pages/about.html
+++ b/pages/about.html
@@ -50,14 +50,8 @@
                     <li class="nav-item">
                         <a class="nav-link text-uppercase" href="#">О компании</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-uppercase" href="#" id="dropdownId"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Услуги</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Ремонт грузовых вагонов</a>
-                            <a class="dropdown-item" href="#">Ремонт колесных пар</a>
-                            <a class="dropdown-item" href="#">Дополнительные услуги</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link text-uppercase" href="repair-vagon.html">Услуги</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-uppercase" href="contacts.html">Контакты</a>
